[gd_scene load_steps=7 format=3 uid="uid://djk2p8hfq0e6a"]

[ext_resource type="Shader" path="res://Shaders/pauseMenu.gdshader" id="1_0ybut"]
[ext_resource type="Script" path="res://Scenes/pauseMenu.gd" id="1_tegjv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fogo8"]
shader = ExtResource("1_0ybut")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_r1met"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_mj7i3"]
resource_name = "blur"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.822, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hou22"]
_data = {
"RESET": SubResource("Animation_r1met"),
"blur": SubResource("Animation_mj7i3")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tegjv")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_fogo8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -149.0
offset_right = -22.9999
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 2.5)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Riprendi" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Riprendi"

[node name="Ricomincia" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Ricomincia"

[node name="Esci" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Esci"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hou22")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/Riprendi" to="." method="_on_riprendi_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Ricomincia" to="." method="_on_ricomincia_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Esci" to="." method="_on_esci_pressed"]
